<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.haim.cases.MainActivity">

    <Button
        android:id="@+id/value1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value1"
        android:layout_below="@+id/caseProject"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <Button
        android:id="@+id/value2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value2"
        android:layout_below="@+id/value1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <TextView
        android:id="@+id/afterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="use this only after state index"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/value2"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/visit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit1"
        android:layout_below="@+id/afterValue"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <Button
        android:id="@+id/visit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit2"
        android:layout_alignEnd="@+id/value2"
        android:layout_alignBottom="@+id/visit1" />

    <TextView
        android:id="@+id/afterVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="use this only after dObject visited"
        android:layout_below="@+id/visit1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/caseProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="this is Cases project "
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/visit2"
        android:layout_marginStart="22dp" />

    <Button
        android:id="@+id/goal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal2"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/afterVisit"
        android:layout_alignStart="@+id/caseProject"
        android:layout_marginStart="34dp" />

    <TextView
        android:id="@+id/shareInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="click on 'share info' to get different index for specific user information "
        android:layout_marginTop="25dp"
        android:layout_below="@+id/goal1"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/goal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal1"
        android:layout_alignTop="@+id/goal2"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

</RelativeLayout>
